# oscarine-api

./: .deepsource.toml  .env.example  .flake8.ini  .flaskenv  .gitignore  .hound.yml  .pep8speaks.yml  .pre-commit-config.yaml  .travis.yml  Dockerfile  LICENSE  Procfile  README.md  README.rst  app.json  autoapp.py  config.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  tests-start.sh  webpack.config.js
.circleci/: config.yml
.github/: dependabot.yml
alembic/: env.py
alembic/versions/: 09f4d0a776b0_add_column_is_shop_available.py  0f7e921cbc13_add_otp_created_time_column.py  2f2622a0b619_addresses_table.py  30c3d93498d1_immutable_address.py  3a0ebcec740d_orders_and_ordered_items_tables.py  41a26b9d2ff9_email_password_hash_not_nullable.py  469e75dfa8c3_order_and_ordered_item_tables.py  46e06e80c43a_add_shops_table.py  54f029830204_update_owner_table.py  57f5a2ad41b0_address_table.py  5ce477cd7ee3_add_otp_column.py  7508f0a78b5b_is_available_non_nullable.py  76082d06c7a7_add_owner_table.py  89255db472dd_add_user_table.py  8a71c95c0c8b_add_shops_table.py  b01c371b68cf_shop_id_slug.py  b6fb9692f762_orders_and_ordered_items_tables.py  c96049c7b9a7_update_user_table.py  d531f09700c4_add_radius_column_for_shops.py  d54778171038_add_items_table.py  daf1eaa11951_add_column_is_available.py  db26174ec486_order_and_ordered_item_tables.py  ea97318f0bc6_cart_table.py
app/: __init__.py  main.py  models.py  routes.py  tests_pre_start.py
app/api/: auth.py  tokens.py  users.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: address.py  auth.py  cart.py  items.py  login.py  orders.py  owner.py  shops.py  users.py
app/api/utils/: calculation.py  db.py  error.py  otp.py  owner_security.py  pagination.py  parsing.py  security.py
app/choices/: cost_unit.py  order_status.py
app/core/: config.py  email.py  jwt.py
app/crud/: address.py  auth.py  cart.py  item.py  order.py  owner.py  shop.py  user.py
app/db/: base.py  session.py
app/db_models/: address.py  cart.py  item.py  order.py  ordered_item.py  owner.py  shop.py  user.py
app/errors/: handlers.py
app/fsm/: order.py
app/main/: routes.py
app/models/: address.py  auth.py  cart.py  item.py  order.py  owner.py  shop.py  token.py  user.py
app/templates/: index.html
app/tests/: conftest.py
app/tests/api/api_v1/: test_cart.py  test_items.py  test_shops.py  test_users.py
app/tests/db_models/: test_shop.py
app/tests/factory/: address.py  base.py  cart.py  item.py  owner.py  shop.py  user.py
app/tests/utils/: owner.py  shops.py
assets/js/: main.js
migrations/versions/: 34a52e4c3fda_new_fields_in_user_model.py  9549f215d08a_add_user_table.py  a6e2e5bcf9d6_.py  a86d4d16ed53_user_tokens.py  aaefff0ffe81_users_table.py
oscarine_api/: app.py  errors.py  extensions.py  settings.py
oscarine_api/public/: forms.py  views.py
oscarine_api/templates/: email.html  footer.html  layout.html  nav.html
oscarine_api/templates/public/: home.html
oscarine_api/user/: models.py  views.py
requirements/: dev.txt  prod.txt  tests.txt
scripts/: lint.sh  test.sh  test_ci.sh
supervisord_programs/: gunicorn.conf
tests/: conftest.py  factories.py  settings.py  test_forms.py  test_functional.py  test_models.py
