[tool.black]
line-length = 90
target-version = ['py38']
skip-string-normalization = true
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \__pycache__
    | \.tox
    | \.venv
    | venv
    | buck-out
    | build
    | dist
    | alembic
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
line_length = 90
skip = 'alembic/,venv/,.venv/'
known_first_party = 'app'
known_third_party = 'fastapi, pydantic, sqlalchemy'
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.pycln]
path = "app/"
exclude = "(alembic/|.venv/|venv/)"
all = true

[tool.poetry]
name = "oscarine-api"
version = "0.1.0"
description = ""
authors = ["Haider Ali <haider.lee23@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.5"
fastapi = "0.65.0"
uvicorn = {extras = ["standard"], version = "0.13.4"}
gunicorn = "20.1.0"
python-dotenv = "0.17.1"
SQLAlchemy = "1.4.14"
alembic = "1.6.2"
email-validator = "1.1.2"
passlib = "1.7.4"
bcrypt = "3.2.0"
psycopg2 = "2.8.6"
PyJWT = "2.1.0"
aiosmtplib = "1.1.6"
GeoAlchemy2 = "0.8.5"
SQLAlchemy-Utils = "0.37.2"

[tool.poetry.dev-dependencies]
black = "21.5b1"
isort = "5.8.0"
pre-commit = "2.12.1"
pycln = "0.0.2"
pyupgrade = "2.15.0"
# For testing
pytest = "6.2.4"
tenacity = "7.0.0"
requests = "2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
