[tool.black]
line-length = 88
target-version = ['py38']
skip-string-normalization = true
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \__pycache__
    | \.tox
    | \.venv
    | venv
    | buck-out
    | build
    | dist
    | alembic
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
line_length = 88
skip = 'alembic/,venv/,.venv/'
known_first_party = 'app'
known_third_party = 'fastapi, pydantic, sqlalchemy'
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.pycln]
path = "app/"
exclude = "(alembic/|.venv/|venv/)"
all = true

[tool.poetry]
name = "oscarine-api"
version = "0.1.0"
description = ""
authors = ["Haider Ali <haider.lee23@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.5"
fastapi = "0.73.0"
uvicorn = {extras = ["standard"], version = "0.14.0"}
gunicorn = "20.1.0"
python-dotenv = "0.18.0"
SQLAlchemy = "1.4.20"
alembic = "1.6.5"
email-validator = "1.1.3"
psycopg2 = "2.9.1"
aiosmtplib = "1.1.6"
GeoAlchemy2 = "0.9.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
SQLAlchemy-Utils = "0.37.8"
python-slugify = "^5.0.2"

[tool.poetry.dev-dependencies]
black = "21.6b0"
isort = "5.9.1"
pre-commit = "2.13.0"
pycln = "0.0.4"
pyupgrade = "2.20.0"
vulture = "^2.3"
# For testing
pytest = "6.2.4"
tenacity = "7.0.0"
requests = "2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
